When sniffing text/plain and we decide it's really text/plain, just claim the sniffer didn't find a type, so that other sniffers get a crack at it.  Bug 395533, r+sr=biesi, a=bsmedberg